travail/2e_semestre/bachelor_Sem/labo/outil00/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> CALC calc
Rule 2     start -> CHECK check
Rule 3     start -> SPLIT split
Rule 4     start -> ISNUMBER isnumber
Rule 5     start -> ISLIST list
Rule 6     start -> TOKEN token
Rule 7     start -> STATE state_exp
Rule 8     check -> check1
Rule 9     check -> check2
Rule 10    check1 -> c_premises MINUS MINUS c_conclusion
Rule 11    check2 -> MINUS MINUS c_conclusion
Rule 12    c_premises -> c_statement COMA c_premises
Rule 13    c_premises -> c_statement
Rule 14    c_statement -> c_exp c_right_statement
Rule 15    c_right_statement -> MINUS SUP VAR
Rule 16    c_right_statement -> comparator c_term_var
Rule 17    c_right_statement -> IN NAME
Rule 18    c_term_var -> c_term
Rule 19    c_term_var -> VAR
Rule 20    c_conclusion -> c_state_exp EQUAL c_exp
Rule 21    c_state_exp -> c_list c_exp
Rule 22    c_state_exp -> c_exp
Rule 23    c_exp -> NAME OP c_exp CP
Rule 24    c_exp -> c_term
Rule 25    c_exp -> VAR
Rule 26    c_exp -> NAME
Rule 27    c_exp -> c_exp COMA c_exp
Rule 28    c_exp -> c_exp SEMICOLON c_exp
Rule 29    c_term -> NUM
Rule 30    c_term -> c_list
Rule 31    c_list -> OSB c_exp CSB
Rule 32    c_list -> OSB CSB
Rule 33    c_morelist -> c_exp
Rule 34    c_list -> INF c_exp SUP
Rule 35    calc -> exp
Rule 36    calc -> condition
Rule 37    condition -> exp comparator exp
Rule 38    comparator -> EQUAL EQUAL
Rule 39    comparator -> SUP
Rule 40    comparator -> SUP EQUAL
Rule 41    comparator -> INF
Rule 42    comparator -> INF EQUAL
Rule 43    exp -> NAME OP exp CP
Rule 44    exp -> exp more
Rule 45    exp -> NUM
Rule 46    exp -> list
Rule 47    list -> OSB morelist CSB
Rule 48    morelist -> NUM COMA morelist
Rule 49    morelist -> NUM SEMICOLON morelist
Rule 50    morelist -> NUM
Rule 51    list -> OSB CSB
Rule 52    list -> INF morelist SUP
Rule 53    more -> COMA exp more
Rule 54    more -> SEMICOLON exp more
Rule 55    more -> COMA exp
Rule 56    more -> SEMICOLON exp
Rule 57    split -> s_exp
Rule 58    s_exp -> NAME OP s_subexp CP
Rule 59    s_exp -> s_term
Rule 60    s_exp -> VAR
Rule 61    s_exp -> s_exp SEMICOLON s_exp
Rule 62    s_exp -> s_exp COMA s_exp
Rule 63    s_term -> NUM
Rule 64    s_term -> c_list
Rule 65    s_subexp -> NAME OP s_subexp CP
Rule 66    s_subexp -> s_term
Rule 67    s_subexp -> VAR
Rule 68    s_subexp -> s_subexp SEMICOLON s_subexp
Rule 69    token -> t_statement
Rule 70    token -> t_exp
Rule 71    token -> t_conclusion
Rule 72    t_statement -> t_exp t_right_statement
Rule 73    t_right_statement -> MINUS SUP VAR
Rule 74    t_right_statement -> IN NAME
Rule 75    t_right_statement -> comparator c_term_var
Rule 76    t_exp -> NAME OP t_exp CP
Rule 77    t_exp -> t_term
Rule 78    t_exp -> VAR
Rule 79    t_exp -> t_exp COMA t_exp
Rule 80    t_exp -> t_exp SEMICOLON t_exp
Rule 81    t_term -> NUM
Rule 82    t_term -> t_list
Rule 83    t_conclusion -> t_state_exp EQUAL t_exp
Rule 84    t_conclusion -> t_exp EQUAL t_exp
Rule 85    t_state_exp -> t_list t_exp_or_name
Rule 86    t_exp_or_name -> t_exp
Rule 87    t_exp_or_name -> NAME
Rule 88    t_list -> OSB t_exp CSB
Rule 89    t_list -> INF t_exp SUP
Rule 90    isnumber -> NUM
Rule 91    state_exp -> state exp_or_name
Rule 92    state -> INF c_morelist SUP
Rule 93    exp_or_name -> NAME OP c_exp CP
Rule 94    exp_or_name -> NAME OP CP
Rule 95    exp_or_name -> NAME

Terminals, with rules where they appear

CALC                 : 1
CHECK                : 2
COMA                 : 12 27 48 53 55 62 79
CP                   : 23 43 58 65 76 93 94
CSB                  : 31 32 47 51 88
EQUAL                : 20 38 38 40 42 83 84
IN                   : 17 74
INF                  : 34 41 42 52 89 92
ISLIST               : 5
ISNUMBER             : 4
MINUS                : 10 10 11 11 15 73
NAME                 : 17 23 26 43 58 65 74 76 87 93 94 95
NUM                  : 29 45 48 49 50 63 81 90
OP                   : 23 43 58 65 76 93 94
OSB                  : 31 32 47 51 88
SEMICOLON            : 28 49 54 56 61 68 80
SPLIT                : 3
STATE                : 7
SUP                  : 15 34 39 40 52 73 89 92
TOKEN                : 6
VAR                  : 15 19 25 60 67 73 78
error                : 

Nonterminals, with rules where they appear

c_conclusion         : 10 11
c_exp                : 14 20 21 22 23 27 27 28 28 31 33 34 93
c_list               : 21 30 64
c_morelist           : 92
c_premises           : 10 12
c_right_statement    : 14
c_state_exp          : 20
c_statement          : 12 13
c_term               : 18 24
c_term_var           : 16 75
calc                 : 1
check                : 2
check1               : 8
check2               : 9
comparator           : 16 37 75
condition            : 36
exp                  : 35 37 37 43 44 53 54 55 56
exp_or_name          : 91
isnumber             : 4
list                 : 5 46
more                 : 44 53 54
morelist             : 47 48 49 52
s_exp                : 57 61 61 62 62
s_subexp             : 58 65 68 68
s_term               : 59 66
split                : 3
start                : 0
state                : 91
state_exp            : 7
t_conclusion         : 71
t_exp                : 70 72 76 79 79 80 80 83 84 84 86 88 89
t_exp_or_name        : 85
t_list               : 82 85
t_right_statement    : 72
t_state_exp          : 83
t_statement          : 69
t_term               : 77
token                : 6

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . CALC calc
    (2) start -> . CHECK check
    (3) start -> . SPLIT split
    (4) start -> . ISNUMBER isnumber
    (5) start -> . ISLIST list
    (6) start -> . TOKEN token
    (7) start -> . STATE state_exp

    CALC            shift and go to state 2
    CHECK           shift and go to state 3
    SPLIT           shift and go to state 4
    ISNUMBER        shift and go to state 5
    ISLIST          shift and go to state 6
    TOKEN           shift and go to state 7
    STATE           shift and go to state 8

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> CALC . calc
    (35) calc -> . exp
    (36) calc -> . condition
    (43) exp -> . NAME OP exp CP
    (44) exp -> . exp more
    (45) exp -> . NUM
    (46) exp -> . list
    (37) condition -> . exp comparator exp
    (47) list -> . OSB morelist CSB
    (51) list -> . OSB CSB
    (52) list -> . INF morelist SUP

    NAME            shift and go to state 12
    NUM             shift and go to state 13
    OSB             shift and go to state 15
    INF             shift and go to state 16

    calc                           shift and go to state 9
    exp                            shift and go to state 10
    condition                      shift and go to state 11
    list                           shift and go to state 14

state 3

    (2) start -> CHECK . check
    (8) check -> . check1
    (9) check -> . check2
    (10) check1 -> . c_premises MINUS MINUS c_conclusion
    (11) check2 -> . MINUS MINUS c_conclusion
    (12) c_premises -> . c_statement COMA c_premises
    (13) c_premises -> . c_statement
    (14) c_statement -> . c_exp c_right_statement
    (23) c_exp -> . NAME OP c_exp CP
    (24) c_exp -> . c_term
    (25) c_exp -> . VAR
    (26) c_exp -> . NAME
    (27) c_exp -> . c_exp COMA c_exp
    (28) c_exp -> . c_exp SEMICOLON c_exp
    (29) c_term -> . NUM
    (30) c_term -> . c_list
    (31) c_list -> . OSB c_exp CSB
    (32) c_list -> . OSB CSB
    (34) c_list -> . INF c_exp SUP

    MINUS           shift and go to state 21
    NAME            shift and go to state 24
    VAR             shift and go to state 26
    NUM             shift and go to state 27
    OSB             shift and go to state 29
    INF             shift and go to state 30

    check                          shift and go to state 17
    check1                         shift and go to state 18
    check2                         shift and go to state 19
    c_premises                     shift and go to state 20
    c_statement                    shift and go to state 22
    c_exp                          shift and go to state 23
    c_term                         shift and go to state 25
    c_list                         shift and go to state 28

state 4

    (3) start -> SPLIT . split
    (57) split -> . s_exp
    (58) s_exp -> . NAME OP s_subexp CP
    (59) s_exp -> . s_term
    (60) s_exp -> . VAR
    (61) s_exp -> . s_exp SEMICOLON s_exp
    (62) s_exp -> . s_exp COMA s_exp
    (63) s_term -> . NUM
    (64) s_term -> . c_list
    (31) c_list -> . OSB c_exp CSB
    (32) c_list -> . OSB CSB
    (34) c_list -> . INF c_exp SUP

    NAME            shift and go to state 33
    VAR             shift and go to state 35
    NUM             shift and go to state 36
    OSB             shift and go to state 29
    INF             shift and go to state 30

    split                          shift and go to state 31
    s_exp                          shift and go to state 32
    s_term                         shift and go to state 34
    c_list                         shift and go to state 37

state 5

    (4) start -> ISNUMBER . isnumber
    (90) isnumber -> . NUM

    NUM             shift and go to state 39

    isnumber                       shift and go to state 38

state 6

    (5) start -> ISLIST . list
    (47) list -> . OSB morelist CSB
    (51) list -> . OSB CSB
    (52) list -> . INF morelist SUP

    OSB             shift and go to state 15
    INF             shift and go to state 16

    list                           shift and go to state 40

state 7

    (6) start -> TOKEN . token
    (69) token -> . t_statement
    (70) token -> . t_exp
    (71) token -> . t_conclusion
    (72) t_statement -> . t_exp t_right_statement
    (76) t_exp -> . NAME OP t_exp CP
    (77) t_exp -> . t_term
    (78) t_exp -> . VAR
    (79) t_exp -> . t_exp COMA t_exp
    (80) t_exp -> . t_exp SEMICOLON t_exp
    (83) t_conclusion -> . t_state_exp EQUAL t_exp
    (84) t_conclusion -> . t_exp EQUAL t_exp
    (81) t_term -> . NUM
    (82) t_term -> . t_list
    (85) t_state_exp -> . t_list t_exp_or_name
    (88) t_list -> . OSB t_exp CSB
    (89) t_list -> . INF t_exp SUP

    NAME            shift and go to state 45
    VAR             shift and go to state 47
    NUM             shift and go to state 49
    OSB             shift and go to state 51
    INF             shift and go to state 52

    token                          shift and go to state 41
    t_statement                    shift and go to state 42
    t_exp                          shift and go to state 43
    t_conclusion                   shift and go to state 44
    t_term                         shift and go to state 46
    t_state_exp                    shift and go to state 48
    t_list                         shift and go to state 50

state 8

    (7) start -> STATE . state_exp
    (91) state_exp -> . state exp_or_name
    (92) state -> . INF c_morelist SUP

    INF             shift and go to state 55

    state_exp                      shift and go to state 53
    state                          shift and go to state 54

state 9

    (1) start -> CALC calc .

    $end            reduce using rule 1 (start -> CALC calc .)


state 10

    (35) calc -> exp .
    (44) exp -> exp . more
    (37) condition -> exp . comparator exp
    (53) more -> . COMA exp more
    (54) more -> . SEMICOLON exp more
    (55) more -> . COMA exp
    (56) more -> . SEMICOLON exp
    (38) comparator -> . EQUAL EQUAL
    (39) comparator -> . SUP
    (40) comparator -> . SUP EQUAL
    (41) comparator -> . INF
    (42) comparator -> . INF EQUAL

    $end            reduce using rule 35 (calc -> exp .)
    COMA            shift and go to state 58
    SEMICOLON       shift and go to state 59
    EQUAL           shift and go to state 60
    SUP             shift and go to state 61
    INF             shift and go to state 62

    more                           shift and go to state 56
    comparator                     shift and go to state 57

state 11

    (36) calc -> condition .

    $end            reduce using rule 36 (calc -> condition .)


state 12

    (43) exp -> NAME . OP exp CP

    OP              shift and go to state 63


state 13

    (45) exp -> NUM .

    COMA            reduce using rule 45 (exp -> NUM .)
    SEMICOLON       reduce using rule 45 (exp -> NUM .)
    EQUAL           reduce using rule 45 (exp -> NUM .)
    SUP             reduce using rule 45 (exp -> NUM .)
    INF             reduce using rule 45 (exp -> NUM .)
    $end            reduce using rule 45 (exp -> NUM .)
    CP              reduce using rule 45 (exp -> NUM .)


state 14

    (46) exp -> list .

    COMA            reduce using rule 46 (exp -> list .)
    SEMICOLON       reduce using rule 46 (exp -> list .)
    EQUAL           reduce using rule 46 (exp -> list .)
    SUP             reduce using rule 46 (exp -> list .)
    INF             reduce using rule 46 (exp -> list .)
    $end            reduce using rule 46 (exp -> list .)
    CP              reduce using rule 46 (exp -> list .)


state 15

    (47) list -> OSB . morelist CSB
    (51) list -> OSB . CSB
    (48) morelist -> . NUM COMA morelist
    (49) morelist -> . NUM SEMICOLON morelist
    (50) morelist -> . NUM

    CSB             shift and go to state 65
    NUM             shift and go to state 66

    morelist                       shift and go to state 64

state 16

    (52) list -> INF . morelist SUP
    (48) morelist -> . NUM COMA morelist
    (49) morelist -> . NUM SEMICOLON morelist
    (50) morelist -> . NUM

    NUM             shift and go to state 66

    morelist                       shift and go to state 67

state 17

    (2) start -> CHECK check .

    $end            reduce using rule 2 (start -> CHECK check .)


state 18

    (8) check -> check1 .

    $end            reduce using rule 8 (check -> check1 .)


state 19

    (9) check -> check2 .

    $end            reduce using rule 9 (check -> check2 .)


state 20

    (10) check1 -> c_premises . MINUS MINUS c_conclusion

    MINUS           shift and go to state 68


state 21

    (11) check2 -> MINUS . MINUS c_conclusion

    MINUS           shift and go to state 69


state 22

    (12) c_premises -> c_statement . COMA c_premises
    (13) c_premises -> c_statement .

    COMA            shift and go to state 70
    MINUS           reduce using rule 13 (c_premises -> c_statement .)


state 23

    (14) c_statement -> c_exp . c_right_statement
    (27) c_exp -> c_exp . COMA c_exp
    (28) c_exp -> c_exp . SEMICOLON c_exp
    (15) c_right_statement -> . MINUS SUP VAR
    (16) c_right_statement -> . comparator c_term_var
    (17) c_right_statement -> . IN NAME
    (38) comparator -> . EQUAL EQUAL
    (39) comparator -> . SUP
    (40) comparator -> . SUP EQUAL
    (41) comparator -> . INF
    (42) comparator -> . INF EQUAL

    COMA            shift and go to state 72
    SEMICOLON       shift and go to state 73
    MINUS           shift and go to state 74
    IN              shift and go to state 76
    EQUAL           shift and go to state 60
    SUP             shift and go to state 61
    INF             shift and go to state 62

    c_right_statement              shift and go to state 71
    comparator                     shift and go to state 75

state 24

    (23) c_exp -> NAME . OP c_exp CP
    (26) c_exp -> NAME .

    OP              shift and go to state 77
    COMA            reduce using rule 26 (c_exp -> NAME .)
    SEMICOLON       reduce using rule 26 (c_exp -> NAME .)
    MINUS           reduce using rule 26 (c_exp -> NAME .)
    IN              reduce using rule 26 (c_exp -> NAME .)
    EQUAL           reduce using rule 26 (c_exp -> NAME .)
    SUP             reduce using rule 26 (c_exp -> NAME .)
    INF             reduce using rule 26 (c_exp -> NAME .)
    CSB             reduce using rule 26 (c_exp -> NAME .)
    CP              reduce using rule 26 (c_exp -> NAME .)
    $end            reduce using rule 26 (c_exp -> NAME .)


state 25

    (24) c_exp -> c_term .

    COMA            reduce using rule 24 (c_exp -> c_term .)
    SEMICOLON       reduce using rule 24 (c_exp -> c_term .)
    MINUS           reduce using rule 24 (c_exp -> c_term .)
    IN              reduce using rule 24 (c_exp -> c_term .)
    EQUAL           reduce using rule 24 (c_exp -> c_term .)
    SUP             reduce using rule 24 (c_exp -> c_term .)
    INF             reduce using rule 24 (c_exp -> c_term .)
    CSB             reduce using rule 24 (c_exp -> c_term .)
    CP              reduce using rule 24 (c_exp -> c_term .)
    $end            reduce using rule 24 (c_exp -> c_term .)


state 26

    (25) c_exp -> VAR .

    COMA            reduce using rule 25 (c_exp -> VAR .)
    SEMICOLON       reduce using rule 25 (c_exp -> VAR .)
    MINUS           reduce using rule 25 (c_exp -> VAR .)
    IN              reduce using rule 25 (c_exp -> VAR .)
    EQUAL           reduce using rule 25 (c_exp -> VAR .)
    SUP             reduce using rule 25 (c_exp -> VAR .)
    INF             reduce using rule 25 (c_exp -> VAR .)
    CSB             reduce using rule 25 (c_exp -> VAR .)
    CP              reduce using rule 25 (c_exp -> VAR .)
    $end            reduce using rule 25 (c_exp -> VAR .)


state 27

    (29) c_term -> NUM .

    COMA            reduce using rule 29 (c_term -> NUM .)
    SEMICOLON       reduce using rule 29 (c_term -> NUM .)
    MINUS           reduce using rule 29 (c_term -> NUM .)
    IN              reduce using rule 29 (c_term -> NUM .)
    EQUAL           reduce using rule 29 (c_term -> NUM .)
    SUP             reduce using rule 29 (c_term -> NUM .)
    INF             reduce using rule 29 (c_term -> NUM .)
    CSB             reduce using rule 29 (c_term -> NUM .)
    CP              reduce using rule 29 (c_term -> NUM .)
    $end            reduce using rule 29 (c_term -> NUM .)


state 28

    (30) c_term -> c_list .

    COMA            reduce using rule 30 (c_term -> c_list .)
    SEMICOLON       reduce using rule 30 (c_term -> c_list .)
    MINUS           reduce using rule 30 (c_term -> c_list .)
    IN              reduce using rule 30 (c_term -> c_list .)
    EQUAL           reduce using rule 30 (c_term -> c_list .)
    SUP             reduce using rule 30 (c_term -> c_list .)
    INF             reduce using rule 30 (c_term -> c_list .)
    CSB             reduce using rule 30 (c_term -> c_list .)
    CP              reduce using rule 30 (c_term -> c_list .)
    $end            reduce using rule 30 (c_term -> c_list .)


state 29

    (31) c_list -> OSB . c_exp CSB
    (32) c_list -> OSB . CSB
    (23) c_exp -> . NAME OP c_exp CP
    (24) c_exp -> . c_term
    (25) c_exp -> . VAR
    (26) c_exp -> . NAME
    (27) c_exp -> . c_exp COMA c_exp
    (28) c_exp -> . c_exp SEMICOLON c_exp
    (29) c_term -> . NUM
    (30) c_term -> . c_list
    (31) c_list -> . OSB c_exp CSB
    (32) c_list -> . OSB CSB
    (34) c_list -> . INF c_exp SUP

    CSB             shift and go to state 79
    NAME            shift and go to state 24
    VAR             shift and go to state 26
    NUM             shift and go to state 27
    OSB             shift and go to state 29
    INF             shift and go to state 30

    c_exp                          shift and go to state 78
    c_term                         shift and go to state 25
    c_list                         shift and go to state 28

state 30

    (34) c_list -> INF . c_exp SUP
    (23) c_exp -> . NAME OP c_exp CP
    (24) c_exp -> . c_term
    (25) c_exp -> . VAR
    (26) c_exp -> . NAME
    (27) c_exp -> . c_exp COMA c_exp
    (28) c_exp -> . c_exp SEMICOLON c_exp
    (29) c_term -> . NUM
    (30) c_term -> . c_list
    (31) c_list -> . OSB c_exp CSB
    (32) c_list -> . OSB CSB
    (34) c_list -> . INF c_exp SUP

    NAME            shift and go to state 24
    VAR             shift and go to state 26
    NUM             shift and go to state 27
    OSB             shift and go to state 29
    INF             shift and go to state 30

    c_exp                          shift and go to state 80
    c_term                         shift and go to state 25
    c_list                         shift and go to state 28

state 31

    (3) start -> SPLIT split .

    $end            reduce using rule 3 (start -> SPLIT split .)


state 32

    (57) split -> s_exp .
    (61) s_exp -> s_exp . SEMICOLON s_exp
    (62) s_exp -> s_exp . COMA s_exp

    $end            reduce using rule 57 (split -> s_exp .)
    SEMICOLON       shift and go to state 81
    COMA            shift and go to state 82


state 33

    (58) s_exp -> NAME . OP s_subexp CP

    OP              shift and go to state 83


state 34

    (59) s_exp -> s_term .

    SEMICOLON       reduce using rule 59 (s_exp -> s_term .)
    COMA            reduce using rule 59 (s_exp -> s_term .)
    $end            reduce using rule 59 (s_exp -> s_term .)


state 35

    (60) s_exp -> VAR .

    SEMICOLON       reduce using rule 60 (s_exp -> VAR .)
    COMA            reduce using rule 60 (s_exp -> VAR .)
    $end            reduce using rule 60 (s_exp -> VAR .)


state 36

    (63) s_term -> NUM .

    SEMICOLON       reduce using rule 63 (s_term -> NUM .)
    COMA            reduce using rule 63 (s_term -> NUM .)
    $end            reduce using rule 63 (s_term -> NUM .)
    CP              reduce using rule 63 (s_term -> NUM .)


state 37

    (64) s_term -> c_list .

    SEMICOLON       reduce using rule 64 (s_term -> c_list .)
    COMA            reduce using rule 64 (s_term -> c_list .)
    $end            reduce using rule 64 (s_term -> c_list .)
    CP              reduce using rule 64 (s_term -> c_list .)


state 38

    (4) start -> ISNUMBER isnumber .

    $end            reduce using rule 4 (start -> ISNUMBER isnumber .)


state 39

    (90) isnumber -> NUM .

    $end            reduce using rule 90 (isnumber -> NUM .)


state 40

    (5) start -> ISLIST list .

    $end            reduce using rule 5 (start -> ISLIST list .)


state 41

    (6) start -> TOKEN token .

    $end            reduce using rule 6 (start -> TOKEN token .)


state 42

    (69) token -> t_statement .

    $end            reduce using rule 69 (token -> t_statement .)


state 43

    (70) token -> t_exp .
    (72) t_statement -> t_exp . t_right_statement
    (79) t_exp -> t_exp . COMA t_exp
    (80) t_exp -> t_exp . SEMICOLON t_exp
    (84) t_conclusion -> t_exp . EQUAL t_exp
    (73) t_right_statement -> . MINUS SUP VAR
    (74) t_right_statement -> . IN NAME
    (75) t_right_statement -> . comparator c_term_var
    (38) comparator -> . EQUAL EQUAL
    (39) comparator -> . SUP
    (40) comparator -> . SUP EQUAL
    (41) comparator -> . INF
    (42) comparator -> . INF EQUAL

    $end            reduce using rule 70 (token -> t_exp .)
    COMA            shift and go to state 85
    SEMICOLON       shift and go to state 86
    EQUAL           shift and go to state 87
    MINUS           shift and go to state 88
    IN              shift and go to state 89
    SUP             shift and go to state 61
    INF             shift and go to state 62

    t_right_statement              shift and go to state 84
    comparator                     shift and go to state 90

state 44

    (71) token -> t_conclusion .

    $end            reduce using rule 71 (token -> t_conclusion .)


state 45

    (76) t_exp -> NAME . OP t_exp CP

    OP              shift and go to state 91


state 46

    (77) t_exp -> t_term .

    COMA            reduce using rule 77 (t_exp -> t_term .)
    SEMICOLON       reduce using rule 77 (t_exp -> t_term .)
    EQUAL           reduce using rule 77 (t_exp -> t_term .)
    MINUS           reduce using rule 77 (t_exp -> t_term .)
    IN              reduce using rule 77 (t_exp -> t_term .)
    SUP             reduce using rule 77 (t_exp -> t_term .)
    INF             reduce using rule 77 (t_exp -> t_term .)
    $end            reduce using rule 77 (t_exp -> t_term .)
    CSB             reduce using rule 77 (t_exp -> t_term .)
    CP              reduce using rule 77 (t_exp -> t_term .)


state 47

    (78) t_exp -> VAR .

    COMA            reduce using rule 78 (t_exp -> VAR .)
    SEMICOLON       reduce using rule 78 (t_exp -> VAR .)
    EQUAL           reduce using rule 78 (t_exp -> VAR .)
    MINUS           reduce using rule 78 (t_exp -> VAR .)
    IN              reduce using rule 78 (t_exp -> VAR .)
    SUP             reduce using rule 78 (t_exp -> VAR .)
    INF             reduce using rule 78 (t_exp -> VAR .)
    $end            reduce using rule 78 (t_exp -> VAR .)
    CSB             reduce using rule 78 (t_exp -> VAR .)
    CP              reduce using rule 78 (t_exp -> VAR .)


state 48

    (83) t_conclusion -> t_state_exp . EQUAL t_exp

    EQUAL           shift and go to state 92


state 49

    (81) t_term -> NUM .

    COMA            reduce using rule 81 (t_term -> NUM .)
    SEMICOLON       reduce using rule 81 (t_term -> NUM .)
    EQUAL           reduce using rule 81 (t_term -> NUM .)
    MINUS           reduce using rule 81 (t_term -> NUM .)
    IN              reduce using rule 81 (t_term -> NUM .)
    SUP             reduce using rule 81 (t_term -> NUM .)
    INF             reduce using rule 81 (t_term -> NUM .)
    $end            reduce using rule 81 (t_term -> NUM .)
    CSB             reduce using rule 81 (t_term -> NUM .)
    CP              reduce using rule 81 (t_term -> NUM .)


state 50

    (82) t_term -> t_list .
    (85) t_state_exp -> t_list . t_exp_or_name
    (86) t_exp_or_name -> . t_exp
    (87) t_exp_or_name -> . NAME
    (76) t_exp -> . NAME OP t_exp CP
    (77) t_exp -> . t_term
    (78) t_exp -> . VAR
    (79) t_exp -> . t_exp COMA t_exp
    (80) t_exp -> . t_exp SEMICOLON t_exp
    (81) t_term -> . NUM
    (82) t_term -> . t_list
    (88) t_list -> . OSB t_exp CSB
    (89) t_list -> . INF t_exp SUP

  ! shift/reduce conflict for INF resolved as shift
    COMA            reduce using rule 82 (t_term -> t_list .)
    SEMICOLON       reduce using rule 82 (t_term -> t_list .)
    EQUAL           reduce using rule 82 (t_term -> t_list .)
    MINUS           reduce using rule 82 (t_term -> t_list .)
    IN              reduce using rule 82 (t_term -> t_list .)
    SUP             reduce using rule 82 (t_term -> t_list .)
    $end            reduce using rule 82 (t_term -> t_list .)
    NAME            shift and go to state 96
    VAR             shift and go to state 47
    NUM             shift and go to state 49
    OSB             shift and go to state 51
    INF             shift and go to state 52

  ! INF             [ reduce using rule 82 (t_term -> t_list .) ]

    t_list                         shift and go to state 93
    t_exp_or_name                  shift and go to state 94
    t_exp                          shift and go to state 95
    t_term                         shift and go to state 46

state 51

    (88) t_list -> OSB . t_exp CSB
    (76) t_exp -> . NAME OP t_exp CP
    (77) t_exp -> . t_term
    (78) t_exp -> . VAR
    (79) t_exp -> . t_exp COMA t_exp
    (80) t_exp -> . t_exp SEMICOLON t_exp
    (81) t_term -> . NUM
    (82) t_term -> . t_list
    (88) t_list -> . OSB t_exp CSB
    (89) t_list -> . INF t_exp SUP

    NAME            shift and go to state 45
    VAR             shift and go to state 47
    NUM             shift and go to state 49
    OSB             shift and go to state 51
    INF             shift and go to state 52

    t_exp                          shift and go to state 97
    t_term                         shift and go to state 46
    t_list                         shift and go to state 93

state 52

    (89) t_list -> INF . t_exp SUP
    (76) t_exp -> . NAME OP t_exp CP
    (77) t_exp -> . t_term
    (78) t_exp -> . VAR
    (79) t_exp -> . t_exp COMA t_exp
    (80) t_exp -> . t_exp SEMICOLON t_exp
    (81) t_term -> . NUM
    (82) t_term -> . t_list
    (88) t_list -> . OSB t_exp CSB
    (89) t_list -> . INF t_exp SUP

    NAME            shift and go to state 45
    VAR             shift and go to state 47
    NUM             shift and go to state 49
    OSB             shift and go to state 51
    INF             shift and go to state 52

    t_exp                          shift and go to state 98
    t_term                         shift and go to state 46
    t_list                         shift and go to state 93

state 53

    (7) start -> STATE state_exp .

    $end            reduce using rule 7 (start -> STATE state_exp .)


state 54

    (91) state_exp -> state . exp_or_name
    (93) exp_or_name -> . NAME OP c_exp CP
    (94) exp_or_name -> . NAME OP CP
    (95) exp_or_name -> . NAME

    NAME            shift and go to state 100

    exp_or_name                    shift and go to state 99

state 55

    (92) state -> INF . c_morelist SUP
    (33) c_morelist -> . c_exp
    (23) c_exp -> . NAME OP c_exp CP
    (24) c_exp -> . c_term
    (25) c_exp -> . VAR
    (26) c_exp -> . NAME
    (27) c_exp -> . c_exp COMA c_exp
    (28) c_exp -> . c_exp SEMICOLON c_exp
    (29) c_term -> . NUM
    (30) c_term -> . c_list
    (31) c_list -> . OSB c_exp CSB
    (32) c_list -> . OSB CSB
    (34) c_list -> . INF c_exp SUP

    NAME            shift and go to state 24
    VAR             shift and go to state 26
    NUM             shift and go to state 27
    OSB             shift and go to state 29
    INF             shift and go to state 30

    c_morelist                     shift and go to state 101
    c_exp                          shift and go to state 102
    c_term                         shift and go to state 25
    c_list                         shift and go to state 28

state 56

    (44) exp -> exp more .

    COMA            reduce using rule 44 (exp -> exp more .)
    SEMICOLON       reduce using rule 44 (exp -> exp more .)
    EQUAL           reduce using rule 44 (exp -> exp more .)
    SUP             reduce using rule 44 (exp -> exp more .)
    INF             reduce using rule 44 (exp -> exp more .)
    $end            reduce using rule 44 (exp -> exp more .)
    CP              reduce using rule 44 (exp -> exp more .)


state 57

    (37) condition -> exp comparator . exp
    (43) exp -> . NAME OP exp CP
    (44) exp -> . exp more
    (45) exp -> . NUM
    (46) exp -> . list
    (47) list -> . OSB morelist CSB
    (51) list -> . OSB CSB
    (52) list -> . INF morelist SUP

    NAME            shift and go to state 12
    NUM             shift and go to state 13
    OSB             shift and go to state 15
    INF             shift and go to state 16

    exp                            shift and go to state 103
    list                           shift and go to state 14

state 58

    (53) more -> COMA . exp more
    (55) more -> COMA . exp
    (43) exp -> . NAME OP exp CP
    (44) exp -> . exp more
    (45) exp -> . NUM
    (46) exp -> . list
    (47) list -> . OSB morelist CSB
    (51) list -> . OSB CSB
    (52) list -> . INF morelist SUP

    NAME            shift and go to state 12
    NUM             shift and go to state 13
    OSB             shift and go to state 15
    INF             shift and go to state 16

    exp                            shift and go to state 104
    list                           shift and go to state 14

state 59

    (54) more -> SEMICOLON . exp more
    (56) more -> SEMICOLON . exp
    (43) exp -> . NAME OP exp CP
    (44) exp -> . exp more
    (45) exp -> . NUM
    (46) exp -> . list
    (47) list -> . OSB morelist CSB
    (51) list -> . OSB CSB
    (52) list -> . INF morelist SUP

    NAME            shift and go to state 12
    NUM             shift and go to state 13
    OSB             shift and go to state 15
    INF             shift and go to state 16

    exp                            shift and go to state 105
    list                           shift and go to state 14

state 60

    (38) comparator -> EQUAL . EQUAL

    EQUAL           shift and go to state 106


state 61

    (39) comparator -> SUP .
    (40) comparator -> SUP . EQUAL

    NAME            reduce using rule 39 (comparator -> SUP .)
    NUM             reduce using rule 39 (comparator -> SUP .)
    OSB             reduce using rule 39 (comparator -> SUP .)
    INF             reduce using rule 39 (comparator -> SUP .)
    VAR             reduce using rule 39 (comparator -> SUP .)
    EQUAL           shift and go to state 107


state 62

    (41) comparator -> INF .
    (42) comparator -> INF . EQUAL

    NAME            reduce using rule 41 (comparator -> INF .)
    NUM             reduce using rule 41 (comparator -> INF .)
    OSB             reduce using rule 41 (comparator -> INF .)
    INF             reduce using rule 41 (comparator -> INF .)
    VAR             reduce using rule 41 (comparator -> INF .)
    EQUAL           shift and go to state 108


state 63

    (43) exp -> NAME OP . exp CP
    (43) exp -> . NAME OP exp CP
    (44) exp -> . exp more
    (45) exp -> . NUM
    (46) exp -> . list
    (47) list -> . OSB morelist CSB
    (51) list -> . OSB CSB
    (52) list -> . INF morelist SUP

    NAME            shift and go to state 12
    NUM             shift and go to state 13
    OSB             shift and go to state 15
    INF             shift and go to state 16

    exp                            shift and go to state 109
    list                           shift and go to state 14

state 64

    (47) list -> OSB morelist . CSB

    CSB             shift and go to state 110


state 65

    (51) list -> OSB CSB .

    COMA            reduce using rule 51 (list -> OSB CSB .)
    SEMICOLON       reduce using rule 51 (list -> OSB CSB .)
    EQUAL           reduce using rule 51 (list -> OSB CSB .)
    SUP             reduce using rule 51 (list -> OSB CSB .)
    INF             reduce using rule 51 (list -> OSB CSB .)
    $end            reduce using rule 51 (list -> OSB CSB .)
    CP              reduce using rule 51 (list -> OSB CSB .)

